fix: help widget in dark mode and overall text coloring

--- a/css/activities.css
+++ b/css/activities.css
@@ -1182,7 +1182,6 @@ table {
   overflow-x: hidden;
   overflow-y: auto;
   width: 350px;
-  background: #e8e8e8 !important;
   padding: 1rem 1rem 0 0;
   display: flex;
   flex-direction: column;
@@ -1849,7 +1848,6 @@ input.timbreName {
   font-family: sans-serif;
   text-align: center;
   margin-left: 24px;
-  color: #666666;
 }
 
 .radioBtn {
